// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyRenderer accepts a map for components 1`] = `
"<View className=\\"test\\">
  <Link href=\\"http://test\\">
    Link
  </Link>
</View>"
`;

exports[`BodyRenderer tells you when pass undefined 1`] = `null`;

exports[`BodyRenderer works with phenomic json body 1`] = `
"<p className=\\"test\\">
  <Link href=\\"http://test\\">
    Link
  </Link>
</p>"
`;

exports[`BodyRenderer works with raw html 1`] = `
"<div
  dangerouslySetInnerHTML={{
    __html: '<h1>Test</h1'
  }}
 />"
`;
